--- a/docusaurus/tedge/src/css/custom.css
+++ b/docusaurus/tedge/src/css/custom.css
@@ -6,25 +6,25 @@
 
 /* You can override the default Infima variables here. */
 :root {
-  --ifm-color-primary: #2e8555;
-  --ifm-color-primary-dark: #29784c;
-  --ifm-color-primary-darker: #277148;
-  --ifm-color-primary-darkest: #205d3b;
-  --ifm-color-primary-light: #33925d;
-  --ifm-color-primary-lighter: #359962;
-  --ifm-color-primary-lightest: #3cad6e;
+  --ifm-color-primary: #204a87;
+  --ifm-color-primary-dark: #1d437a;
+  --ifm-color-primary-darker: #1a3c6e;
+  --ifm-color-primary-darkest: #173663;
+  --ifm-color-primary-light: #245296;
+  --ifm-color-primary-lighter: #285ba7;
+  --ifm-color-primary-lightest: #2c65ba;
   --ifm-code-font-size: 95%;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
 }
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
 [data-theme='dark'] {
-  --ifm-color-primary: #25c2a0;
-  --ifm-color-primary-dark: #21af90;
-  --ifm-color-primary-darker: #1fa588;
-  --ifm-color-primary-darkest: #1a8870;
-  --ifm-color-primary-light: #29d5b0;
-  --ifm-color-primary-lighter: #32d8b4;
-  --ifm-color-primary-lightest: #4fddbf;
+  --ifm-color-primary: #fcaf3e;
+  --ifm-color-primary-dark: #e39e38;
+  --ifm-color-primary-darker: #cc8e32;
+  --ifm-color-primary-darkest: #b8802d;
+  --ifm-color-primary-light: #ffc245;
+  --ifm-color-primary-lighter: #ffd84d;
+  --ifm-color-primary-lightest: #fff056;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
 }
