--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -76,3 +76,45 @@ html[data-theme='dark'] .header-github-link:before {
 .logo {
   margin: 20px;
 }
+
+input {
+  margin-bottom: 1rem;
+  width: 100%;
+  font-size: 1rem;
+  padding: 0.4rem;
+}
+
+input[type="text"] {
+  height: 40px;
+  padding: 0.5rem 1rem;
+  border: 1px solid #999;
+}
+
+input[type="submit"] {
+  background-color: #000000;
+  border: none;
+  color: #fff;
+  padding: 0.5rem 1rem;
+  height: 40px;
+  cursor: pointer;
+}
+
+input:focus {
+  outline: none;
+  border-color: #000000;
+}
+
+input[type="checkbox"] {
+  display: inline-block;
+  width: auto;
+}
+
+button {
+  border-radius: 4px;
+  border-width: 1px;
+  padding: 6px 18px;
+  /* border-color: var(--ifm-color-primary-light); */
+  /* background-color: var(--ifm-color-primary-contrast-background); */
+  background-color: var(--ifm-color-primary-contrast-background);
+  cursor: pointer;
+}
